--- a/template/project.config.json
+++ b/template/project.config.json
@@ -1,11 +1,12 @@
 {
     "description": "项目配置文件。",
     "setting": {
-        "urlCheck": true,
-        "es6": false,
-        "postcss": true,
-        "minified": true,
-        "newFeature": true
+        "urlCheck": false,
+		"es6": true,
+		"postcss": true,
+		"minified": true,
+		"newFeature": true,
+		"autoAudits": false
     },
     "miniprogramRoot": "dist/wx/",
     "compileType": "miniprogram",
